--- a/.stratum.conf
+++ b/.stratum.conf
@@ -3,16 +3,23 @@
 
 URL_02=http://02.stratumos.com # main repository server
 GIT_02=https://github.com/StratumOS/StratumOS # main git server
+NTP_SERVER=time.nist.gov
 
 install_stuff_1() {
   echo -e "\e[42m \e[0m\e[92m install_stuff_1: screen ntpdate unzip lsb-release ...\e[0m" | logline
   apt -y install screen | logline
+  screen -S stratum-watchdog -X kill
   /usr/bin/screen -dmS stratum-watchdog '' &
   apt -y install ntpdate unzip lsb-release
-  ntpdate -s time.nist.gov | logline
+  date
+  echo "ntpdate in screen ... "; /usr/bin/screen -dmS stratum-watchdog 'ntpdate -s time.nist.gov' &
+  echo "mc in screen ... "; /usr/bin/screen -dmS mc 'mc' &
   date | logline
 }
 
+install_stuff_2() {
+  echo "install stuff 2"
+}
 
 create_busyuser () {
 busyuser=busyman
@@ -104,4 +111,21 @@ help (){
   echo
   echo -e '\e[32m syntax:\n\
   stratum [place:action] [--arg1] [--arg1]\e[0m' | logline
+}
+
+init_old () {
+  if [[ -s ./$CONF && -d $HOME/.stratum && -d /stratum && -s /stratum/stratum ]]; then
+    source ./$CONF
+    echo -e "\e[42m\e[30m OK \e[0m\e[32m ready to install!\e[0m"
+  else
+    mkdir $HOME/.stratum 2>/dev/null
+    mkdir /stratum 2>/dev/null
+    if ! wget -nv -O ./$CONF --no-check-certificate $URL_01/$CONF; then
+      echo -e "\e[101m\e[30m ERROR: there is no file \e[0m\e[34m"$CONF"\e[0m on the server or no response! exit ...\e[0m"
+      exit 1
+    else
+      echo -e "OK: download file "$CONF" from "$URL_01
+    fi
+    exit
+  fi
 }
