move functions to .stratum.func

--- a/.stratum.conf
+++ b/.stratum.conf
@@ -129,3 +129,13 @@ init_old () {
     exit
   fi
 }
+
+update_preferences () {
+cp $HOME/.bash_aliases $HOME/.bash_aliases.bak
+cp $HOME/.bashrc $HOME/.bashrc.bak
+rm $HOME/.bash_aliases
+rm $HOME/.bashrc
+echo -e "\e[32m Download bash preferences files ... \n\ wget -nv --no-check-certificate http://stratumos.com/node \e[0m"
+	wget -nv -O /root/.bash_aliases --no-check-certificate $REPO_URL/node/.bashrc
+	wget -nv -O /home/busyman/.bash_aliases --no-check-certificate $REPO_URL/node/.bash_aliases
+}
