--- a/.stratum.conf
+++ b/.stratum.conf
@@ -1,6 +1,17 @@
 #!/usr/bin/env bash
 # .stratum.conf - StratumOS config file
 
+__dir="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
+__file="${__dir}/$(basename "${BASH_SOURCE[0]}")"
+__base="$(basename ${__file} .sh)"
+__root="$(cd "$(dirname "${__dir}")" && pwd)"
+
 URL_02=http://02.stratumos.com # main repository server
 GIT_02=https://github.com/StratumOS/StratumOS # main git server
 NTP_SERVER=time.nist.gov
+
+REPO_LIST=(
+stratum
+.stratum.conf
+.stratum.func
+)
