--- a/.stratum.conf
+++ b/.stratum.conf
@@ -6,12 +6,14 @@ __file="${__dir}/$(basename "${BASH_SOURCE[0]}")"
 __base="$(basename ${__file} .sh)"
 __root="$(cd "$(dirname "${__dir}")" && pwd)"
 
-URL_02=http://02.stratumos.com # main repository server
-GIT_02=https://github.com/StratumOS/StratumOS # main git server
-NTP_SERVER=time.nist.gov
+repo_url_2=http://02.stratumos.com # main repository server
+git_url_2=https://github.com/StratumOS/StratumOS # main git server
+ntp_server=time.nist.gov
 
-REPO_LIST=(
+repo_list=(
 stratum
 .stratum.conf
 .stratum.func
+/node/etc/init.d/stratum-watchdog
+/node/root/.bashrc
 )
