--- a/.stratum.conf
+++ b/.stratum.conf
@@ -10,10 +10,16 @@ repo_url_2=http://02.stratumos.com # main repository server
 git_url_2=https://github.com/StratumOS/StratumOS # main git server
 ntp_server=time.nist.gov
 
-repo_list=(
-stratum
-.stratum.conf
-.stratum.func
-/node/etc/init.d/stratum-watchdog
-/node/root/.bashrc
+files_list=(
+/stratum/stratum
+/stratum/.stratum.conf
+/stratum/.stratum.func
+/etc/init.d/stratum-watchdog
+/root/.bashrc
+/root/.bash_profile
+/home/busyman/.bashrc
+/home/busyman/.bash_profile
+/home/busyman/.bash_aliases
+/home/busyman/.config/openbox/rc.xml
+/home/busyman/.config/tint2/tint2rc
 )
